Learn page - fix for title spacing

--- a/themes/openstack/css/learn.css
+++ b/themes/openstack/css/learn.css
@@ -4,7 +4,7 @@
 	background-size: cover; 
 }
 .learn-hero .intro-message > h1 {
-	margin-bottom: 20px;
+	margin: 90px 0 0;
 }
 .learn-intro {
 	text-align: center;
